scrollbar fix ( hopefully )

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body
+{
+    overflow: hidden;
+}
 
 #screen
 {
@@ -7,6 +11,7 @@
     flex-direction: column;
     background-color: white;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #full_name
